<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_forecast"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#44BEFD"
    android:layout_marginStart="10dp"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginEnd="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginBottom="10dp">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/row_height"
        android:layout_weight="1"
        android:background="#F5FFFA"
        android:orientation="horizontal"
        tools:context=".ForecastFragment">

        <TextView

            android:layout_width="88dp"
            android:layout_height="41dp"
            android:paddingLeft="50dp"
            android:text="@string/Monday" />

        <ImageView

            android:layout_width="84dp"
            android:layout_height="48dp"
            android:layout_weight="0"
            android:src="@drawable/snowman"
            android:visibility="visible"
            tools:visibility="visible" />
        <TextView

            android:layout_width="123dp"
            android:layout_height="@dimen/textview_weather_height"
            android:text="@string/Snowy" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/row_height"
        android:layout_weight="1"
        android:background="#F5FFFA"
        android:orientation="horizontal"
        tools:context=".ForecastFragment">

        <TextView

            android:layout_width="89dp"
            android:layout_height="35dp"
            android:paddingLeft="50dp"
            android:text="@string/Tuesday" />

        <ImageView

            android:layout_width="wrap_content"
            android:layout_height="51dp"
            android:layout_weight="0"
            android:src="@drawable/rain"
            android:visibility="visible"
            tools:visibility="visible" />
        <TextView

            android:layout_width="123dp"
            android:layout_height="@dimen/textview_weather_height"
            android:text="@string/rain" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="#F5FFFA"
        android:orientation="horizontal"
        tools:context=".ForecastFragment">

        <TextView

            android:layout_width="89dp"
            android:layout_height="38dp"
            android:paddingLeft="50dp"
            android:text="@string/Wednesday" />

        <ImageView

            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_weight="0"
            android:src="@drawable/snowflake"
            android:visibility="visible"
            tools:visibility="visible" />

        <TextView

            android:layout_width="123dp"
            android:layout_height="@dimen/textview_weather_height"
            android:text="@string/Snowflake" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="42dp"
        android:layout_weight="1"
        android:background="#F5FFFA"
        android:orientation="horizontal"
        tools:context=".ForecastFragment">

        <TextView

            android:layout_width="87dp"
            android:layout_height="39dp"
            android:paddingLeft="50dp"
            android:text="@string/Thursday" />

        <ImageView

            android:layout_width="wrap_content"
            android:layout_height="58dp"
            android:layout_weight="0"
            android:src="@drawable/storm"
            android:visibility="visible"
            tools:visibility="visible" />

        <TextView

            android:layout_width="123dp"
            android:layout_height="@dimen/textview_weather_height"
            android:text="@string/thunderstorms" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/row_height"
        android:layout_weight="1"
        android:background="#F5FFFA"
        android:orientation="horizontal"
        tools:context=".ForecastFragment">

        <TextView

            android:layout_width="85dp"
            android:layout_height="38dp"
            android:paddingLeft="50dp"
            android:text="@string/Friday" />

        <ImageView

            android:layout_width="wrap_content"
            android:layout_height="52dp"
            android:layout_weight="0"
            android:src="@drawable/wind"
            android:visibility="visible"
            tools:visibility="visible" />

        <TextView

            android:layout_width="123dp"
            android:layout_height="@dimen/textview_weather_height"
            android:text="@string/Winny" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/row_height"
        android:layout_weight="1"
        android:background="#F5FFFA"
        android:orientation="horizontal"
        tools:context=".ForecastFragment">

        <TextView

            android:layout_width="85dp"
            android:layout_height="35dp"
            android:paddingLeft="50dp"
            android:text="@string/Saturday" />

        <ImageView

            android:layout_width="92dp"
            android:layout_height="48dp"
            android:layout_weight="0"
            android:src="@drawable/sunny"
            android:visibility="visible"
            tools:visibility="visible" />

        <TextView

            android:layout_width="123dp"
            android:layout_height="@dimen/textview_weather_height"
            android:text="@string/Hot" />
    </LinearLayout>

</LinearLayout>